<resources>
    <string name="app_name">TallyBook</string>
    <string name="main_label">记账本</string>
    <string name="checked">checked</string>
    <string name="unchecked">unchecked</string>
    <string name="no_data_tv">暂无数据显示\n按右下角按钮添加数据</string>

    <string name="set_data_label">新建条目</string>
    <string name="in">收入</string>
    <string name="out">支出</string>
    <string name="money_hint">请填写金额</string>
    <string name="category_hint">请选择分类</string>
    <string name="time_hint">请选择时间</string>
    <string name="remark_hint">写点什么作为备注吧…（200字以内）</string>
    <string name="set_time">设置时间</string>
    
    <string-array name="option">
        <item>今天</item>
        <item>本月</item>
    </string-array>

    <string-array name="inout">
        <item>收入</item>
        <item>支出</item>
    </string-array>
</resources>
